# talks

./: .gitmodules  README.md
2024-goto-cph-whats-up-with-rust/: README.md  Whats Up With Rust.slides.html  index.html  just-testing.html  just-testing.txt  package-lock.json  present.sh  setup.sh
2024-goto-cph-whats-up-with-rust/.ipynb_checkpoints/: Whats Up With Rust-checkpoint.ipynb
2024-kiwipycon-import-rust/: README.md
202411-rustlab-safer-software/: .gitignore  Cargo.toml  README.md  brainstorming.md  content.md
202411-rustlab-safer-software/example-scan-ints/: Cargo.toml
202411-rustlab-safer-software/example-scan-ints/src/: main.rs
202411-rustlab-safer-software/example-verified-circular-buffer/: Cargo.toml  README.md
202411-rustlab-safer-software/example-verified-circular-buffer/src/: lib.rs  main.rs  verification.rs
202411-rustlab-safer-software/example-verified-multiplication/: Cargo.toml
202411-rustlab-safer-software/example-verified-multiplication/src/: main.rs
202411-rustlab-safer-software/slides/reveal.js/: index.html
202411-rustlab-safer-software/slides/reveal.js/css/theme/source/: timclicks.scss
202411-rustlab-safer-software/slides/reveal.js/css/theme/template/: settings.scss
202411-rustlab-webapi-workshop/: README.md  book.toml  hide-menu.js  italian-cities.csv  learning-rust.rs  slides.css  slides.js
202411-rustlab-webapi-workshop/italia/: Cargo.toml
202411-rustlab-webapi-workshop/italia/src/: main.rs
2025-dataengbytes-what-is-rust/: .gitignore  Cargo.toml  README.md  cohort_analysis.py
2025-dataengbytes-what-is-rust/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
2025-dataengbytes-what-is-rust/data/: customers.csv  products.csv  sales.csv  sites.csv
2025-dataengbytes-what-is-rust/python-analysis/: README.md  hello.py  pyproject.toml
2025-dataengbytes-what-is-rust/python-analysis/src/cohort_analysis/: main.py
2025-dataengbytes-what-is-rust/scripts/: data-generator.rs
2025-dataengbytes-what-is-rust/src/: cohort_analysis.rs
2025-rustasia-rust-for-the-rest-of-the-world/: README.md
(+129 files in other folders)
