[package]
name = "italia"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0" # cargo add actix_web (https://actix.rs)

clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
csv = "1.3.0"
env_logger = "0.11.5" # cargo add env_logger
log = "0.4.22" # cargo add log
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
